--- a/HRMSApi/appsettings.json
+++ b/HRMSApi/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevConnection": "Server=IMRAN-DESKTOP;Database=HRMSDB;User ID=sa; Password=1234;MultipleActiveResultSets=true"
+    "DevConnection": "Server=IMRAN-DESKTOP;Database=HRMSDB;User ID=sa; Password=1234;MultipleActiveResultSets=true",
+    "DevConnection1": "Server=IMRAN-ERP;Database=HRMSApiDB;User ID=sa; Password=1234;MultipleActiveResultSets=true"
   }
 }
