--- a/HRMSApi/appsettings.json
+++ b/HRMSApi/appsettings.json
@@ -10,5 +10,8 @@
   "ConnectionStrings": {
     "DevConnection": "Server=IMRAN-DESKTOP;Database=HRMSDB;User ID=sa; Password=1234;MultipleActiveResultSets=true",
     "DevConnection1": "Server=IMRAN-ERP;Database=HRMSApiDB;User ID=sa; Password=1234;MultipleActiveResultSets=true"
+  },
+  "AppSettings": {
+    "Token": "super secret key"
   }
 }
